k8s/apps/external/n8n/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n
spec:
  ports:
    - name: http
      protocol: TCP
      port: 5678
