k8s/apps/external/n8n/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
  namespace: n8n
spec:
  parentRefs:
    - name: external
      namespace: gateway
    - name: internal
      namespace: gateway
  hostnames:
    - "n8n.ravil.space"
  rules:
    - backendRefs:
        - name: n8n
          port: 5678
